mySort.h

#ifndef MYSORT_H
#define MYSORT_H
// IMPORTANT: DO NOT CHANGE ANY THING HERE
// you will NOT submit this file and I will use mine version
// Function prototypes
void bubbleSort(int arr[], int n);
void insertionSort(int arr[], int n);
void mergeSort(int arr[], int l, int r);
void heapSort(int arr[], int n);
void countingSort(int arr[], int n);

// Utility functions
void swap(int *x, int *y);

#endif